Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
    },
    "outputs": [],
    "source": [
-    "var = \"art vandelay\" # 'Art Vandelay'"
+    "var = \"art vandelay\" # 'Art Vandelay'\n"
    ]
   },
   {
