--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,8 @@
    },
    "outputs": [],
    "source": [
-    "var = \"art vandelay\" # 'Art Vandelay'\n"
+    "var = \"art vandelay\" # 'Art Vandelay'\n",
+    "var.title"
    ]
   },
   {
