Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
    ],
    "source": [
     "var = \"art vandelay\" # 'Art Vandelay'\n",
-    "var.title"
+    "print(var.title"
    ]
   },
   {
