--- a/index.ipynb
+++ b/index.ipynb
@@ -149,23 +149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<function str.title>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<built-in method title of str object at 0x7ff8d01c4eb0>\n"
+     ]
     }
    ],
    "source": [
     "var = \"art vandelay\" # 'Art Vandelay'\n",
-    "print(var.title"
+    "print(var.title)"
    ]
   },
   {
