Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,8 +161,7 @@
     }
    ],
    "source": [
-    "var = \"art vandelay\" # 'Art Vandelay'\n",
-    "print(var.title)"
+    "title(\"art vandelay # 'Art Vandelay'"
    ]
   },
   {
