--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,8 @@
     }
    ],
    "source": [
-    "title(\"art vandelay\") # 'Art Vandelay'"
+    "name = \"art vandelay\" # 'Art Vandelay'\n",
+    "name."
    ]
   },
   {
