--- a/index.ipynb
+++ b/index.ipynb
@@ -221,8 +221,7 @@
     }
    ],
    "source": [
-    "email = \"art.vandelay@vandelay.co\" # False\n",
-    "email.right"
+    "email = \"art.vandelay@vandelay.co\" # False"
    ]
   },
   {
