Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,12 +205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'art.vandelay@vandelay'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "email[:3]"
+    "email[-3]"
    ]
   },
   {
