--- a/index.ipynb
+++ b/index.ipynb
@@ -205,23 +205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'.c'"
+       "''"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "email[-:-1]"
+    "email[0:-3]"
    ]
   },
   {
