Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,23 +205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'.c'"
+       "'y.c'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "email[-3:-1]"
+    "email[-3:0]"
    ]
   },
   {
