Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,8 @@
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "ememail[-3:]"
+    "emailaddress = email[-3:]\n",
+    "if emailadd"
    ]
   },
   {
