Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,8 +221,7 @@
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "emailaddress = email[-3:]\n",
-    "if emailadd"
+    "if email[-3:] ="
    ]
   },
   {
