--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,8 @@
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "if email[-3:] = \".com\"\n"
+    "if email[-3:] = \".com\"\n",
+    "\"\""
    ]
   },
   {
