--- a/index.ipynb
+++ b/index.ipynb
@@ -221,9 +221,7 @@
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "if email[-3:] = \".com\"\n",
-    "print(\"True\")\n",
-    "Else\n"
+    "if email[-3:] = \".com"
    ]
   },
   {
