--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "email[-3:] = \".com\""
+    "if email[-3:] = \".com\""
    ]
   },
   {
