Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,9 @@
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
     "if email[-3:] = \".com\":\n",
-    "    print(\"True\""
+    "    print(\"True\")\n",
+    "Else:\n",
+    "    print(F)"
    ]
   },
   {
