--- a/index.ipynb
+++ b/index.ipynb
@@ -205,26 +205,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'.co'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-27-1e7036feabd7>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-1e7036feabd7>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if email[-3:] = \".com\":\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "if email[-3:] = \".com\":\n",
+    "if email[-3:] == \".com\":\n",
     "    print(\"True\")\n",
     "Else:\n",
-    "    print(F)"
+    "    print(\"False\")"
    ]
   },
   {
