Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,15 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-28-f37d75989a7c>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-f37d75989a7c>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    Else:\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
      ]
     }
    ],
@@ -221,7 +220,7 @@
     "email = \"art.vandelay@vandelay.co\" # False\n",
     "if email[-3:] == \".com\":\n",
     "    print(\"True\")\n",
-    "Else:\n",
+    "else:\n",
     "    print(\"False\")"
    ]
   },
