Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,8 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "namepart1 = 'vandelay.com' # 'www.vandelay.com'\n",
+    "namepart2 "
    ]
   },
   {
