Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,9 @@
    "outputs": [],
    "source": [
     "namepart1 = 'vandelay.com' # 'www.vandelay.com'\n",
-    "namepart2 "
+    "namepart2 = 'www.'\n",
+    "\n",
+    "napart"
    ]
   },
   {
