--- a/index.ipynb
+++ b/index.ipynb
@@ -243,7 +243,7 @@
     "namepart1 = 'vandelay.com' # 'www.vandelay.com'\n",
     "namepart2 = 'www.'\n",
     "\n",
-    "napart"
+    "print(namepart2 + name"
    ]
   },
   {
