--- a/index.ipynb
+++ b/index.ipynb
@@ -233,17 +233,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "www.vandelay.com\n"
+     ]
+    }
+   ],
    "source": [
     "namepart1 = 'vandelay.com' # 'www.vandelay.com'\n",
     "namepart2 = 'www.'\n",
     "\n",
-    "print(namepart2 + name"
+    "print(namepart2 + namepart1)"
    ]
   },
   {
