Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -275,7 +275,8 @@
    },
    "outputs": [],
    "source": [
-    "code = \"7285553334\" # 728"
+    "code = \"7285553334\" # 728\n",
+    "code[:3]"
    ]
   },
   {
