--- a/index.ipynb
+++ b/index.ipynb
@@ -269,11 +269,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'728'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "code = \"7285553334\" # 728\n",
     "code[:3]"
@@ -287,7 +296,7 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 728"
+    "code = \"7285553334\" # 728"
    ]
   },
   {
