--- a/index.ipynb
+++ b/index.ipynb
@@ -290,13 +290,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'728'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "code = \"7285553334\" # 728"
+    "code = \"7285553334\" # 728\n",
+    "code[:3]"
    ]
   },
   {
